--- a/quiz_game.css
+++ b/quiz_game.css
@@ -29,7 +29,7 @@ h1 {
 }
 #output
 {
-background: white;
+background: rgb(225, 6, 6);
 border-radius: 10px;
 border-top: 10px solid #AA4465;
 padding: 10px;
